--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -10,7 +10,7 @@ const { currentPage } = Astro.props;
 	<nav title="Top Navigation" class="max-w-7xl mx-auto flex justify-between items-center px-4">
 		<div>
 			<a class="text-lg font-medium flex items-center gap-3" href="/">
-				<img src="/logo.png" alt={SITE.title + " logo"} class="h-8 w-8 object-contain rounded-md scale-125" />
+				<img src="/logo.png" alt={SITE.title + " logo"} class="h-8 w-8 object-contain bg-purple-100 rounded-md p-1" />
 				<h1>
 					{SITE.title ?? "Documentation"}
 				</h1>
