--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -9,8 +9,8 @@ const { currentPage } = Astro.props;
 	<SkipToContent />
 	<nav title="Top Navigation" class="max-w-7xl mx-auto flex justify-between items-center px-4">
 		<div>
-			<a class="text-lg font-medium flex items-center gap-3" href="/">
-				<img src="/logo.png" alt={SITE.title + " logo"} class="h-8 w-8 object-contain bg-purple-100 rounded-md p-1" />
+			<a class="text-lg font-medium flex items-center gap-3" href={import.meta.env.BASE_URL}>
+				<img src={import.meta.env.BASE_URL + 'logo.png'} alt={SITE.title + " logo"} class="h-8 w-8 object-contain bg-purple-100 rounded-md p-1" />
 				<h1>
 					{SITE.title ?? "Documentation"}
 				</h1>
@@ -21,19 +21,19 @@ const { currentPage } = Astro.props;
 		<!-- <button onclick="toggleDarkMode()">theme</button> -->
 		{ SITE.twitter &&
 			(<a title="Twitter" class="opacity-90 hover:opacity-100 hover:bg-blue-100 p-2 rounded-full transition-colors" href={'https://twitter.com/'+SITE.twitter}>
-				<img class="h-7" src="/twitter.svg" alt="twitter logo">
+				<img class="h-7" src={import.meta.env.BASE_URL + 'twitter.svg'} alt="twitter logo">
 			</a>)
 		}
 		{
 			SITE.github &&
 			(<a title="Github" class="opacity-80 hover:opacity-100 hover:bg-slate-200 p-2 rounded-full transition-colors" href={'https://github.com/'+SITE.github}>
-				<img class="h-7" src="/github.svg" alt="github logo">
+				<img class="h-7" src={import.meta.env.BASE_URL + 'github.svg'} alt="github logo">
 			</a>)
 		}
 		{
 			SITE.linkedin &&
 			(<a title="linkedin" class="opacity-80 hover:opacity-100 hover:bg-blue-50 p-2 rounded-full transition-colors" href={'https://linkedin.com/in/'+SITE.linkedin}>
-				<img class="h-7" src="/linkedin.svg" alt="linkedin logo">
+				<img class="h-7" src={import.meta.env.BASE_URL + 'linkedin.svg'} alt="linkedin logo">
 			</a>)
 		}
 		</div>
