--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -1,15 +1,15 @@
 ---
-
+import { getImage } from 'astro:assets';
 ---
 
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
 
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="alternate icon" type="image/x-icon" href="/favicon.ico" />
+<link rel="icon" type="image/svg+xml" href={import.meta.env.BASE_URL + 'favicon.svg'} />
+<link rel="alternate icon" type="image/x-icon" href={import.meta.env.BASE_URL + 'favicon.ico'} />
 
-<link rel="sitemap" href="/sitemap.xml" />
+<link rel="sitemap" href={import.meta.env.BASE_URL + 'sitemap.xml'} />
 
 <!-- Preload Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,7 +17,7 @@
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@0;1&display=swap" rel="stylesheet" />
 
 <!-- Scrollable a11y code helper -->
-<script src="/make-scrollable-code-focusable.js" is:inline></script>
+<script src={import.meta.env.BASE_URL + 'make-scrollable-code-focusable.js'} is:inline></script>
 
 <!-- This is intentionally inlined to avoid FOUC -->
 <script is:inline>
