--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,18 @@ body {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Electrolize&family=Major+Mono+Display&display=swap");
+
+.display-font {
+    font-family: "Major Mono Display", monospace;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 0.05em;
+}
+
+.base-font {
+    font-family: "Electrolize", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
